started implementing kieker without aspectj --> test-wise implementation for auth.blobToString()